adding Surefire and Jacoco reports plugins in the POM.xml